force-app/src/objects/OrderApi__Invoice_Installment__c.object
<CustomObject>
    <description>Tracks the installments for an Invoice.</description>
    <fields>
        <fullName>OrderApi__Balance_Due__c</fullName>
        <description>Amount - Total Payments.</description>
        <inlineHelpText>Amount - Total Payments.</inlineHelpText>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Due_Date__c</fullName>
        <description>The date that payment is due for the installment.</description>
        <inlineHelpText>The date that payment is due for the installment.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to related Sales Order</description>
        <inlineHelpText>Linked to related Sales Order</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Invoice_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Installment</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Installment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>